# gemini-invoice-extractor

./: .gitignore  README.md  invoice-extract.ini  pyproject.toml
src/invoice_extract_cli/: cli.py  config.py  gemini_client.py  models.py  normalize.py  pdf_ingest.py
tests/: test_cli_modes.py  test_config.py  test_gemini_models_listing.py  test_gemini_prompt_locale.py  test_normalize.py  test_pdf_path_validation.py  test_prompt_parsing.py  test_text_quality.py
